--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                         <h4 class="hack-generator end pt-2 pb-2"></h4>
 
-                        <a id="verify-button" href="https://doctoredits.com/1654441"> <button type="button" class="btn btn-light btn-block btn-lg btn-c btn-l h-v pb-3">Confirm</button></a>
+                        <a id="verify-button" href="https://singingfiles.com/1657088"> <button type="button" class="btn btn-light btn-block btn-lg btn-c btn-l h-v pb-3">Confirm</button></a>
 
                     </div>
 
